yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: development
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
  - hosts:
    - awsdjangodeployer.com #Host name in Route53
    secretName: webapp-tls
  rules:
  - host: awsdjangodeployer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counter-service
            port:
              number: 80
